=== 4.1.9 / February 20, 2009

* Make compatible with Ruby 1.9.

* Image URLs and image titles can now contain parentheses. #71

* Handle caps properly in link titles. #77

* Remove extra preformatted line breaks after extended block code. #79

* Fix inline <notextile> being recognized as block <notextile>. #81

* Allow leading spaces on lists for backward compatibility with RedCloth 3.x. #89

* Recognize deleted phrases when they start at the beginning of a line. #83

* Fix escaped <code> tag when it has the class attribute and is in a <pre> tag. #95

* Fix dimensions and primes for LaTeX. #103

* Don't allow square brackets inside lang attribute so double square brackets are interpreted like Textile 2 and RedCloth 3. #101

* Improve LaTeX output for tables. #96

* Fix bad parsing of bracketed image links (which would hang the interpreter in some cases). #97

* Handle links containing parentheses.  Brackets are no longer required. #82 [Ryan Alyea]

* Made italics use the correct LaTeX tag: textit rather than emph. #98

* Fixed custom block signatures calling built-in Ruby String methods. #92

* Mentioned the three supported platforms and what's necessary to build RedCloth in the README file.

* Fixed a require problem that caused an error when you would gem check --test RedCloth. #91

=== 4.1.1 / November 19, 2008

* Added 'lib/case_sensitive_require' back into gemspec.  It got left out in the conversion to echoe, so "require 'RedCloth'" didn't work. #88

* Fixed <embed> being recognized as a block-level element when using the twice-cooked method of flash embedding. #87

* Added horizontal rules from RedCloth 3.  Three or more asterisks, dashes, or underscores between blocks triggers the HR tag.

* echoe was not being properly registered as a development dependency; a bug in RubyGems was making it a runtime dependency

* Fixed "No definition for redcloth_to Installing RDoc documentation"

* Fixed wrong platform names when cross-compiling java and win32 versions
