@@ -70,7 +70,7 @@
   Q2Attr = [^"]* ;
   UnqAttr = ( space | [^ \t\r\n<>"'] [^ \t\r\n<>]* ) ;
   Nmtoken = NameChar+ ;
-  Attr =  NameAttr space* "=" space* ('"' Q2Attr '"' | "'" Q1Attr "'" | UnqAttr space+ ) space* ;
+  Attr =  NameAttr "="  ('"' Q2Attr '"' | "'" Q1Attr "'" ) space* ;
   AttrEnd = ( NameAttr space* "=" space* UnqAttr? | Nmtoken ) ;
   AttrSet = ( Attr | Nmtoken space+ ) ;
   
