@@ -1,3 +1,7 @@
+=== Edge
+
+* Allow HTML tags with quoted attributes to be inside link text.  To do this, I had to remove the possibility that attributes in HTML tags could have spaces around the equals sign or unquoted attributes.  This change also greatly expands the complexity of the state machine, so compilation takes a long time. Sorry.
+
 === 4.1.9 / February 20, 2009
 
 * Make compatible with Ruby 1.9.
